# firesync

./: .darklua.json  Cargo.toml  README.md  firesync.json
src/: ast_handler.rs  error.rs  iced.rs  main.rs  tui.rs
src/server/: axum.rs  localtunnel.rs  mod.rs
test/: file.server.lua  file1.server.lua
test_out/: file.server.lua  file1.server.lua  test.client.lua
