[package]
name = "firesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "string"] }
crossterm = "0.27.0"
darklua = { version = "0.12.1", features = ["tracing"] }
full_moon = { version = "0.19.0", features = ["roblox"] }
ratatui = "0.26.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tui-textarea = "0.4.0"
