[package]
name = "firesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "string"] }
darklua = { version = "0.12.1", features = ["tracing"] }
full_moon = { version = "0.19.0", features = ["roblox"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
iced = { version = "0.12.1", features = ["tokio"] }
native-dialog = "0.7.0"
iced_core = "0.12.3"
thiserror = "1.0.58"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# https://docs.rs/notify/latest/notify/#crossbeam-channel--tokio
notify = { version = "6.1.1", default-features = false, features = [
	"macos_kqueue",
] }
notify-debouncer-full = { version = "0.3.1", default-features = false }
localtunnel-client = "0.1.2"
uuid = { version = "1.8.0", features = ["v4"] }
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
